- various minor improvements; - updated repository.